<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".onboarding.OnboardingOneActivity">

    <Button
        android:id="@+id/btn_lewati"
        android:layout_width="112dp"
        android:layout_height="46dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="51dp"
        android:background="@drawable/shape_rectangle_grey"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/lewati"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_lanjut"
        app:layout_constraintHorizontal_bias="0.215"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_lanjut"
        android:layout_width="112dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="51dp"
        android:background="@drawable/shape_rectangle_blue"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/lanjutkan"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="300dp"
        android:layout_height="353.71dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/onboarding_one" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_marginTop="82dp"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:text="@string/pilih_role"
        android:textColor="@color/colorBlue"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/pilih_role_desc"
        android:textColor="@color/colorBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
</androidx.constraintlayout.widget.ConstraintLayout>